--- a/.github/workflows/main_my-fullstack-vite-app.yml
+++ b/.github/workflows/main_my-fullstack-vite-app.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - my-fullstack-vite-app
+name: Build and deploy Fullstack Vite + Node.js app to Azure Web App
 
 on:
   push:
@@ -11,43 +8,62 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      # Install and build frontend (Vite)
+      - name: Install & Build Frontend
         run: |
+          cd client
           npm install
-          npm run build --if-present
-          npm run test --if-present
-      
-      - name: Upload artifact for deployment job
+          npm run build
+          cd ..
+
+      # Install backend dependencies
+      - name: Install Backend
+        run: |
+          cd server
+          npm install
+          cd ..
+
+      # Prepare deployment package
+      - name: Prepare deploy package
+        run: |
+          mkdir deploy
+          cp -r server deploy/server
+          cp -r client/dist deploy/client/dist
+          cp package.json deploy/
+          cp server/package.json deploy/package.json
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: .
+          name: fullstack-app
+          path: deploy/
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: node-app
-      
+          name: fullstack-app
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -55,11 +71,9 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6008B8D3C17C46FE8E04EAD47F041B01 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2966E97F35C74562A4B3A5549B7A76C1 }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
         with:
           app-name: 'my-fullstack-vite-app'
           slot-name: 'Production'
-          package: .
-          
+          package: ./fullstack-app
