--- a/.github/workflows/main_my-fullstack-vite-app.yml
+++ b/.github/workflows/main_my-fullstack-vite-app.yml
@@ -29,6 +29,9 @@ jobs:
           npm run build
           cd ..
 
+      - name: Check dist folder
+        run: ls -l client/dist
+
       # Install backend dependencies
       - name: Install Backend
         run: |
