Add step to check dist folder after frontend build

--- a/.github/workflows/main_my-fullstack-vite-app.yml
+++ b/.github/workflows/main_my-fullstack-vite-app.yml
@@ -29,7 +29,8 @@ jobs:
           npm run build
           cd ..
 
-    
+      - name: Check dist folder
+        run: ls -l client/dist
 
       # Install backend dependencies
       - name: Install Backend
