--- a/.github/workflows/main_my-fullstack-vite-app.yml
+++ b/.github/workflows/main_my-fullstack-vite-app.yml
@@ -1,4 +1,7 @@
-name: Build and deploy Fullstack Vite + Node.js app to Azure Web App
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy Node.js app to Azure Web App - my-fullstack-vite-app
 
 on:
   push:
@@ -8,65 +11,51 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
-      contents: read
+      contents: read #This is required for actions/checkout
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
 
-      # Install and build frontend (Vite)
-      - name: Install & Build Frontend
+      - name: npm install, build, and test
         run: |
           cd client
           npm install
           npm run build
+          npm run test
           cd ..
 
-      - name: Check dist folder
-        run: ls -l client/dist
-
-      # Install backend dependencies
       - name: Install Backend
         run: |
           cd server
           npm install
           cd ..
-
-      # Prepare deployment package
-      - name: Prepare deploy package
-        run: |
-          mkdir deploy
-          cp -r server deploy/server
-          cp -r client/dist deploy/client/dist
-          cp package.json deploy/
-          cp server/package.json deploy/package.json
-
-      - name: Upload artifact
+      
+      - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: fullstack-app
-          path: deploy/
+          name: node-app
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write
-      contents: read
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
 
     steps:
-      - name: Download artifact
+      - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: fullstack-app
-
+          name: node-app
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -74,9 +63,11 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6008B8D3C17C46FE8E04EAD47F041B01 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2966E97F35C74562A4B3A5549B7A76C1 }}
 
-      - name: Deploy to Azure Web App
+      - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
+        id: deploy-to-webapp
         with:
           app-name: 'my-fullstack-vite-app'
           slot-name: 'Production'
-          package: ./fullstack-app
+          package: .
+          
