--- a/.github/workflows/main_my-fullstack-vite-app.yml
+++ b/.github/workflows/main_my-fullstack-vite-app.yml
@@ -22,6 +22,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
+      
+      - name: Set Environment Variables 
+        run: echo "Environment variables set"
+        env:
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_NAME: ${{ secrets.DB_NAME }}
 
       - name: npm install, build, and test
         run: |
@@ -61,10 +69,7 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5DEB6FE2A1F144479747E9DDAFAFD8AE }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6008B8D3C17C46FE8E04EAD47F041B01 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2966E97F35C74562A4B3A5549B7A76C1 }}
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_NAME: ${{ secrets.DB_NAME }}
+          
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
